--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,7 +266,7 @@ img {
   font-family: 'Dosis', sans-serif;
   font-size: 18px;
   font-weight: 500;
-  color: #1A1B26;
+  color: white;
 }
 
 /* Inline Reservation Section */
@@ -315,22 +315,7 @@ img {
   background-color: #0039a6;
 }
 
-/* Promo Offer */
-.promo-offer-section {
-  background-color: #ffffff;
-}
 
-.promo-title {
-  font-family: 'Dosis', sans-serif;
-  font-size: 35px;
-  color: #004CC7;
-}
-
-.promo-offer-section .btn {
-  font-weight: bold;
-  padding: 0.75rem 2rem;
-  font-size: 1.1rem;
-}
 
 /* Dining Section */
 .dining-title {
