--- a/styles/styles.css
+++ b/styles/styles.css
@@ -299,10 +299,16 @@ img {
 /* =========================================================
    RESERVATION SECTION
 ========================================================= */
+
+.cont {
+  background-color: white;
+}
+
 .reservation-inline-section {
   background: url(/hotelMarkupAssets/hamsterreserve.jpg) no-repeat center center;
   background-size: cover;
   padding: 5rem 0;
+  
 }
 
 .reservation-title {
