--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,7 +39,7 @@ img {
   margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
 }
 
