--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@ img {
    LOGO
 ========================================================= */
 .logo-img {
-  width: 80px;
+  width: 150px;
   height: auto;
 }
 
@@ -53,7 +53,7 @@ img {
 
 .nav-link {
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 600;
   color: #ffffff !important;
   padding: 0.5rem 1rem;
@@ -80,6 +80,11 @@ img {
 
 .bottomNAV {
   padding-bottom: 50px;
+}
+
+.reserve {
+  border: 2px solid #E5FEFF;
+  opacity: 1;
 }
 
 /* =========================================================
